<resources>
    <string name="app_name">ToDoApp_Note</string>
    <string name="title_home">Title_home</string>
    <string name="title_dashboard">Title_dashboard</string>
    <string name="title_notifications">Title_notifications</string>
    <string name="to_do_name">To do name</string>
    <string name="to_do_deadline">To do deadline</string>
    <string name="to_do_create_date">To do create date</string>
    <string name="to_do_description">To do description</string>
    <string name="save">Save</string>
</resources>